--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <header class="site-header">
       <div class="container">
         <nav class="site-navigation">
-          <ul>
-            <li>
+          <ul class="site-navigation__list"
+            <li class="site-navigation__item">
               <a href="#">Информация</a>
             </li>
-            <li>
+            <li class="site-navigation__item">
               <a href="#">Новости</a>
             </li>
-            <li>
+            <li class="site-navigation__item">
               <a href="#">Прайс-лист</a>
             </li>
-            <li>
+            <li class="site-navigation__item">
               <a href="shop.html">Магазин</a>
             </li>
-            <li>
+            <li class="site-navigation__item">
               <a href="#">Контакты</a>
             </li>
           </ul>
