Сменил checkbox на radio в fieldset Группа товаров

--- a/shop.html
+++ b/shop.html
@@ -91,15 +91,15 @@
           <fieldset class="filter__groups-of-items">
             <legend class="filter__title">Группы товаров:</legend>
             <label class="filter__condition">
-              <input type="checkbox" name="Бритвенные принадлежности">
+              <input type="radio" name="category">
               Бритвенные принадлежности
             </label>
             <label class="filter__condition">
-              <input type="checkbox" name="Средства для ухода" checked>
+              <input type="radio" name="category" checked>
               Средства для ухода
             </label>
             <label class="filter__condition">
-              <input type="checkbox" name="Аксессуары">
+              <input type="radio" name="category">
               Аксессуары
             </label>
           </fieldset>
