Добавил label к кнопке формы

--- a/shop.html
+++ b/shop.html
@@ -104,7 +104,9 @@
             </label>
           </fieldset>
 
-          <input class="btn btn--filter" type="submit" value="Показать">
+          <label class="btn btn--filter">
+            <input type="submit" value="Показать">
+          </label>
         </form>
       </section>
 
