--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
-        <nav class="site-navigation">
-          <ul class="site-navigation__list"
+      <div class="container row clearfix">
+        <nav class="site-navigation col s-7">
+          <ul class="site-navigation__list">
             <li class="site-navigation__item">
               <a href="#">Информация</a>
             </li>
@@ -28,34 +28,35 @@
             </li>
           </ul>
         </nav>
-        <div class="user">
+
+        <div class="user col s-5">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
 
     <main class="container">
-      <div class="logo logo--index">
+      <div class="logo logo--index row">
         <img src="img/pic__logo--index.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
 
-      <div class="features">
-        <div class="features__item">
+      <div class="features row clearfix">
+        <div class="features__item col s-4">
           <p><b class="features__name">Быстро</b></p>
           <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
         </div>
-        <div class="features__item">
+        <div class="features__item col s-4">
           <p><b class="features__name">Круто</b></p>
           <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </div>
-        <div class="features__item">
+        <div class="features__item col s-4">
           <p><b class="features__name">Дорого</b></p>
           <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </div>
 
-      <div class="content content--index">
-        <div class="content__column content__column--left">
+      <div class="content content--index row clearfix">
+        <div class="content__column content__column--left col s-6">
           <h2 class="content__title">Новости</h2>
           <ul class="content__list">
             <li class="content__item">
@@ -70,7 +71,7 @@
           <a class="btn" href="#">Все новости</a>
         </div>
 
-        <div class="content__column content__column--right">
+        <div class="content__column content__column--right col s-6">
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
@@ -82,8 +83,8 @@
         </div>
       </div>
 
-      <div class="content content--index">
-        <div class="content__column content__column--left">
+      <div class="content content--index row clearfix">
+        <div class="content__column content__column--left col s-6">
           <h2 class="content__title">Контактная информация</h2>
           <p class="content__text">
             Барбершоп «Бородинский»<br>
@@ -99,7 +100,7 @@
           <a class="btn" href="#">Обратная связь</a>
         </div>
 
-        <div class="content__column content__column--right">
+        <div class="content__column content__column--right col s-6">
           <h2 class="content__title">Записаться</h2>
           <p class="content__text">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
           <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
@@ -114,22 +115,24 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <section class="contacts">
-          <p class="contacts__title">Барбершоп «Бородинский»</p><br>
-          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p><br>
-          <a class="contacts__link" href="#">Как нас найти?</a><br>
+      <div class="container row clearfix">
+        <section class="contacts col s-5">
+          <p class="contacts__title">Барбершоп «Бородинский»</p>
+          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__link">
+            <a href="#">Как нас найти?</a>
+          </p>
           <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social">
+        <section class="social col s-2">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
           <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
         </section>
 
-        <section class="copyright">
+        <section class="copyright col s-5">
           <p class="copyright__text">Разработано:</p>
           <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
