--- a/shop.html
+++ b/shop.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
-        <nav class="site-navigation">
+      <div class="container row clearfix">
+        <nav class="site-navigation col s-9">
           <ul class="site-navigation__list">
             <li class="site-navigation__item">
               <div class="logo logo--nav">
@@ -36,14 +36,14 @@
           </ul>
         </nav>
 
-        <div class="user">
+        <div class="user col s-3">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
 
     <main class="container">
-      <header class="page-header">
+      <header class="page-header row">
         <h1 class="page-header__title">Средства для ухода</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs__item">
@@ -58,191 +58,195 @@
         </ul>
       </header>
 
-      <section class="filter">
-        <form class="filter__form" action="#" method="POST">
-          <fieldset class="filter__manufacturers">
-            <legend class="filter__title">Производители:</legend>
-            <label class="filter__condition">
-              <input type="checkbox" name="Baxter of California" checked>
-              Baxter of California
-            </label>
-            <label class="filter__condition">
-              <input type="checkbox" name="Mr Natty">
-              Mr Natty
-            </label>
-            <label class="filter__condition">
-              <input type="checkbox" name="Suavecito" checked>
-              Suavecito
-            </label>
-            <label class="filter__condition">
-              <input type="checkbox" name="Malin+Goetz">
-              Malin+Goetz
-            </label>
-            <label class="filter__condition">
-              <input type="checkbox" name="Murray's">
-              Murray's
-            </label>
-            <label class="filter__condition">
-              <input type="checkbox" name="American crew" checked>
-              American crew
-            </label>
-          </fieldset>
+      <div class="row clearfix">
+        <section class="filter col s-3">
+          <form class="filter__form" action="#" method="POST">
+            <fieldset class="filter__manufacturers">
+              <legend class="filter__title">Производители:</legend>
+              <label class="filter__condition">
+                <input type="checkbox" name="Baxter of California" checked>
+                Baxter of California
+              </label>
+              <label class="filter__condition">
+                <input type="checkbox" name="Mr Natty">
+                Mr Natty
+              </label>
+              <label class="filter__condition">
+                <input type="checkbox" name="Suavecito" checked>
+                Suavecito
+              </label>
+              <label class="filter__condition">
+                <input type="checkbox" name="Malin+Goetz">
+                Malin+Goetz
+              </label>
+              <label class="filter__condition">
+                <input type="checkbox" name="Murray's">
+                Murray's
+              </label>
+              <label class="filter__condition">
+                <input type="checkbox" name="American crew" checked>
+                American crew
+              </label>
+            </fieldset>
 
-          <fieldset class="filter__groups-of-items">
-            <legend class="filter__title">Группы товаров:</legend>
-            <label class="filter__condition">
-              <input type="radio" name="category">
-              Бритвенные принадлежности
-            </label>
-            <label class="filter__condition">
-              <input type="radio" name="category" checked>
-              Средства для ухода
-            </label>
-            <label class="filter__condition">
-              <input type="radio" name="category">
-              Аксессуары
-            </label>
-          </fieldset>
+            <fieldset class="filter__groups-of-items">
+              <legend class="filter__title">Группы товаров:</legend>
+              <label class="filter__condition">
+                <input type="radio" name="category">
+                Бритвенные принадлежности
+              </label>
+              <label class="filter__condition">
+                <input type="radio" name="category" checked>
+                Средства для ухода
+              </label>
+              <label class="filter__condition">
+                <input type="radio" name="category">
+                Аксессуары
+              </label>
+            </fieldset>
 
-          <label class="btn btn--filter">
-            <input type="submit" value="Показать">
-          </label>
-        </form>
-      </section>
+            <label class="btn btn--filter">
+              <input type="submit" value="Показать">
+            </label>
+          </form>
+        </section>
 
-      <section class="items">
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
-            </a>
+        <section class="items col s-9">
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Набор для путешествий
+                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">2 900 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Увлажняющий кондиционер
+                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">750 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Гель для волос
+                <span class="item__title item__title--manufacturer">&#171;Suavecito&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">290 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Глина для укладки волос
+                <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">500 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Гель для волос
+                <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">300 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <article class="item">
+            <div class="item__image">
+              <a class="item__link" href="item.html">
+                <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
+              </a>
+            </div>
+            <h2 class="item__title">
+              <a class="item__link" href="item.html">
+                Набор для бритья
+                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+              </a>
+            </h2>
+            <span class="item__price">3 900 руб.</span>
+            <a class="btn btn--buy" href="#">Купить</a>
+          </article>
+
+          <div class="paginator">
+            <ul>
+              <li class="btn">
+                <a href="#">1</a>
+              </li>
+              <li class="btn btn--active">
+                2
+              </li>
+              <li class="btn">
+                <a href="#">3</a>
+              </li>
+              <li class="btn">
+                <a href="#">4</a>
+              </li>
+            </ul>
           </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Набор для путешествий
-              <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">2 900 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
-            </a>
-          </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Увлажняющий кондиционер
-              <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">750 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
-            </a>
-          </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Гель для волос
-              <span class="item__title item__title--manufacturer">&#171;Suavecito&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">290 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
-            </a>
-          </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Глина для укладки волос
-              <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">500 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
-            </a>
-          </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Гель для волос
-              <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">300 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <article class="item">
-          <div class="item__image">
-            <a class="item__link" href="item.html">
-              <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
-            </a>
-          </div>
-          <h2 class="item__title">
-            <a class="item__link" href="item.html">
-              Набор для бритья
-              <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-            </a>
-          </h2>
-          <span class="item__price">3 900 руб.</span>
-          <a class="btn btn--buy" href="#">Купить</a>
-        </article>
-
-        <div class="paginator">
-          <ul>
-            <li class="btn">
-              <a href="#">1</a>
-            </li>
-            <li class="btn btn--active">
-              2
-            </li>
-            <li class="btn">
-              <a href="#">3</a>
-            </li>
-            <li class="btn">
-              <a href="#">4</a>
-            </li>
-          </ul>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <section class="contacts">
-          <span class="contacts__title">Барбершоп «Бородинский»</span><br>
-          <span class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</span><br>
-          <a class="contacts__link" href="#">Как нас найти?</a><br>
-          <span class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></span>
+      <div class="container row clearfix">
+        <section class="contacts col s-5">
+          <p class="contacts__title">Барбершоп «Бородинский»</p>
+          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__link">
+            <a href="#">Как нас найти?</a>
+          </p>
+          <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social">
+        <section class="social col s-2">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
           <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
         </section>
 
-        <section class="copyright">
+        <section class="copyright col s-5">
           <p class="copyright__text">Разработано:</p>
           <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
