--- a/item.html
+++ b/item.html
@@ -63,17 +63,20 @@
 
       <div class="row clearfix">
         <section class="images col s-6">
-          <div class="image image--big">
-            <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <div class="image image--main row">
+            <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
           </div>
-          <div class="image">
-            <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
-          </div>
-          <div class="image">
-            <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
-          </div>
-          <div class="image">
-            <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+
+          <div class="row clearfix">
+            <div class="image col s-4">
+              <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+            </div>
+            <div class="image col s-4">
+              <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+            </div>
+            <div class="image col s-4">
+              <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+            </div>
           </div>
         </section>
 
