--- a/shop.html
+++ b/shop.html
@@ -112,101 +112,105 @@
         </section>
 
         <section class="items col s-9">
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Набор для путешествий
-                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">2 900 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+          <div class="row clearfix">
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Набор для путешествий
+                  <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">2 900 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
 
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Увлажняющий кондиционер
-                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">750 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Увлажняющий кондиционер
+                  <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">750 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
 
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Гель для волос
-                <span class="item__title item__title--manufacturer">&#171;Suavecito&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">290 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Гель для волос
+                  <span class="item__title item__title--manufacturer">&#171;Suavecito&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">290 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
+          </div>
 
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Глина для укладки волос
-                <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">500 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+          <div class="row clearfix">
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Глина для укладки волос
+                  <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">500 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
 
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Гель для волос
-                <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">300 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Гель для волос
+                  <span class="item__title item__title--manufacturer">&#171;American crew&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">300 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
 
-          <article class="item">
-            <div class="item__image">
-              <a class="item__link" href="item.html">
-                <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
-              </a>
-            </div>
-            <h2 class="item__title">
-              <a class="item__link" href="item.html">
-                Набор для бритья
-                <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
-              </a>
-            </h2>
-            <span class="item__price">3 900 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </article>
+            <article class="item col s-3">
+              <div class="item__image">
+                <a class="item__link" href="item.html">
+                  <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
+                </a>
+              </div>
+              <h2 class="item__title">
+                <a class="item__link" href="item.html">
+                  Набор для бритья
+                  <span class="item__title item__title--manufacturer">&#171;Baxter of California&#187;</span>
+                </a>
+              </h2>
+              <span class="item__price">3 900 руб.</span>
+              <a class="btn btn--buy" href="#">Купить</a>
+            </article>
+          </div>
 
           <div class="paginator">
             <ul>
