--- a/item.html
+++ b/item.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container row clearfix">
         <nav class="site-navigation row col s-9">
-          <ul class="site-navigation__list">
+          <ul class="site-navigation__list clearfix">
             <li class="site-navigation__item">
               <div class="logo logo--nav">
                 <a href="index.html">
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-        <div class="user col s-3">
+        <div class="user col s-3 clearfix">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
