--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container row clearfix">
         <nav class="site-navigation col s-9">
-          <ul class="site-navigation__list">
+          <ul class="site-navigation__list clearfix">
             <li class="site-navigation__item">
               <div class="logo logo--nav">
                 <a href="index.html">
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-        <div class="user col s-3">
+        <div class="user col s-3 clearfix">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
@@ -45,7 +45,7 @@
     <main class="container">
       <header class="page-header row">
         <h1 class="page-header__title">Средства для ухода</h1>
-        <ul class="breadcrumbs">
+        <ul class="breadcrumbs clearfix">
           <li class="breadcrumbs__item">
             <a href="index.html">Главная</a>
           </li>
@@ -213,17 +213,17 @@
           </div>
 
           <div class="paginator">
-            <ul>
-              <li class="btn">
+            <ul class="paginator__list clearfix">
+              <li class="btn btn--paginator">
                 <a href="#">1</a>
               </li>
-              <li class="btn btn--active">
+              <li class="btn btn--paginator btn--active">
                 2
               </li>
-              <li class="btn">
+              <li class="btn btn--paginator">
                 <a href="#">3</a>
               </li>
-              <li class="btn">
+              <li class="btn btn--paginator">
                 <a href="#">4</a>
               </li>
             </ul>
@@ -243,7 +243,7 @@
           <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social col s-2">
+        <section class="social col s-2 clearfix">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
