--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container row clearfix">
         <nav class="site-navigation col s-7">
-          <ul class="site-navigation__list">
+          <ul class="site-navigation__list clearfix">
             <li class="site-navigation__item">
               <a href="#">Информация</a>
             </li>
@@ -29,7 +29,7 @@
           </ul>
         </nav>
 
-        <div class="user col s-5">
+        <div class="user col s-5 clearfix">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="content content--index row clearfix">
-        <div class="content__column content__column--left col s-6">
+        <div class="content__column content__column--left col s-6 clearfix">
           <h2 class="content__title">Новости</h2>
           <ul class="content__list">
             <li class="content__item">
@@ -71,20 +71,20 @@
           <a class="btn" href="#">Все новости</a>
         </div>
 
-        <div class="content__column content__column--right col s-6">
+        <div class="content__column content__column--right col s-6 clearfix">
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
               <img src="img/pic__gallery--barbershop-borodinski-room.jpg" width="286" height="164" alt="Barbershop Borodinski room">
             </a>
           </figure>
-          <a class="btn btn--prev" href="#">Назад</a>
-          <a class="btn btn--next" href="#">Вперёд</a>
+          <a class="btn" href="#">Назад</a>
+          <a class="btn" href="#">Вперёд</a>
         </div>
       </div>
 
       <div class="content content--index row clearfix">
-        <div class="content__column content__column--left col s-6">
+        <div class="content__column content__column--left col s-6 clearfix">
           <h2 class="content__title">Контактная информация</h2>
           <p class="content__text">
             Барбершоп «Бородинский»<br>
@@ -103,12 +103,22 @@
         <div class="content__column content__column--right col s-6">
           <h2 class="content__title">Записаться</h2>
           <p class="content__text">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-          <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-            <input type="text" name="date" value="" placeholder="Дата">
-            <input type="text" name="time" value="" placeholder="Время">
-            <input type="text" name="name" value="" placeholder="Ваше имя">
-            <input type="tel" name="phone" value="" placeholder="Телефон">
-            <input class="btn" type="submit" value="Отправить">
+          <form class="appointment-form clearfix" action="https://echo.htmlacademy.ru" method="post">
+            <label class="appointment-form__field">
+              <input type="text" name="date" value="" placeholder="Дата">
+            </label>
+            <label class="appointment-form__field">
+              <input type="text" name="time" value="" placeholder="Время">
+            </label>
+            <label class="appointment-form__field">
+              <input type="text" name="name" value="" placeholder="Ваше имя">
+            </label>
+            <label class="appointment-form__field">
+              <input type="tel" name="phone" value="" placeholder="Телефон">
+            </label>
+            <label class="btn btn--large">
+              <input type="submit" value="Отправить">
+            </label>
           </form>
         </div>
       </div>
@@ -125,7 +135,7 @@
           <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social col s-2">
+        <section class="social col s-2 clearfix">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
