--- a/item.html
+++ b/item.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container clearfix">
-        <nav class="site-navigation column column--x9">
+        <nav class="site-navigation column column--nine-quarters">
           <ul class="site-navigation__list clearfix">
             <li class="site-navigation__item">
               <div class="logo logo--nav">
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-        <div class="user column column--x3 clearfix">
+        <div class="user column column--three-quarters clearfix">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
@@ -61,48 +61,48 @@
         </ul>
       </header>
 
-      <section class="images column column--x6 clearfix">
-        <div class="image image--main">
-          <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="450" height="500" alt="Набор для путешествий &#171;Baxter of California&#187;">
+      <section class="product-images column column--six-quarters clearfix">
+        <div class="product-image product-image--main">
+          <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="460" height="500" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
-        <div class="image column column--x4">
+        <div class="product-image product-image--simple">
           <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
-        <div class="image column column--x4">
+        <div class="product-image product-image--simple">
           <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
-        <div class="image column column--x4">
+        <div class="product-image product-image--simple">
           <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
       </section>
 
-      <div class="column column--x6">
-        <section class="description">
-          <span class="description__available-status">Есть в наличии</span>
-          <span class="description__vendor-code">Артикул: Dexter-AE</span>
-          <p class="description__text">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится всё,
+      <section class="product-info column column--six-quarters">
+        <section class="product-info__description">
+          <span class="product-info__available-status">Есть в наличии</span>
+          <span class="product-info__vendor-code">Артикул: Dexter-AE</span>
+          <p class="product-info__text">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится всё,
             что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
             крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-          <span class="description__price">2 900 руб.</span>
+          <span class="product-info__price">2 900 руб.</span>
           <a class="btn btn--buy" href="#">Купить</a>
         </section>
 
-        <section class="composition">
-          <h2 class="composition__title">В набор входят:</h2>
-          <ul class="composition__list">
-            <li class="composition__item">Средство для умывания (50 мл)</li>
-            <li class="composition__item">Увлажняющий крем (50 мл)</li>
-            <li class="composition__item">Крем для бритья (50 мл)</li>
-            <li class="composition__item">Крем после бритья, шампунь (50 мл)</li>
-            <li class="composition__item">Удобная кожаная косметичка</li>
+        <section class="product-info__composition">
+          <h2 class="product-info__title">В набор входят:</h2>
+          <ul class="product-info__list">
+            <li class="product-info__item">Средство для умывания (50 мл)</li>
+            <li class="product-info__item">Увлажняющий крем (50 мл)</li>
+            <li class="product-info__item">Крем для бритья (50 мл)</li>
+            <li class="product-info__item">Крем после бритья, шампунь (50 мл)</li>
+            <li class="product-info__item">Удобная кожаная косметичка</li>
           </ul>
         </section>
-      </div>
+      </section>
     </main>
 
     <footer class="site-footer">
       <div class="container clearfix">
-        <section class="contacts column column--x5">
+        <section class="contacts column column--five-quarters">
           <p class="contacts__title">Барбершоп «Бородинский»</p>
           <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
           <p class="contacts__link">
@@ -111,14 +111,14 @@
           <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social column column--x2 clearfix">
+        <section class="social column column--two-quarters clearfix">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
           <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
         </section>
 
-        <section class="copyright column column--x5">
+        <section class="copyright column column--five-quarters">
           <p class="copyright__text">Разработано:</p>
           <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
