--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container clearfix">
-        <nav class="site-navigation column column--x9">
+        <nav class="site-navigation column column--nine-quarters">
           <ul class="site-navigation__list clearfix">
             <li class="site-navigation__item">
               <div class="logo logo--nav">
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-        <div class="user column column--x3 clearfix">
+        <div class="user column column--three-quarters clearfix">
           <a class="user__login" href="#">Вход</a>
         </div>
       </div>
@@ -58,10 +58,10 @@
         </ul>
       </header>
 
-      <section class="filter column column--x3">
+      <section class="filter column column--three-quarters">
         <form class="filter__form" action="#" method="POST">
-          <fieldset class="filter__manufacturers">
-            <legend class="filter__title">Производители:</legend>
+          <section class="filter__manufacturers">
+            <p class="filter__title">Производители:</p>
             <label class="filter__condition">
               <input type="checkbox" name="Baxter of California" checked>
               Baxter of California
@@ -86,10 +86,10 @@
               <input type="checkbox" name="American crew" checked>
               American crew
             </label>
-          </fieldset>
+          </section>
 
-          <fieldset class="filter__groups-of-items">
-            <legend class="filter__title">Группы товаров:</legend>
+          <section class="filter__groups-of-items">
+            <p class="filter__title">Группы товаров:</p>
             <label class="filter__condition">
               <input type="radio" name="category">
               Бритвенные принадлежности
@@ -102,7 +102,7 @@
               <input type="radio" name="category">
               Аксессуары
             </label>
-          </fieldset>
+          </section>
 
           <label class="btn btn--filter">
             <input type="submit" value="Показать">
@@ -110,8 +110,8 @@
         </form>
       </section>
 
-      <section class="items column column--x9 clearfix">
-        <article class="item">
+      <section class="products column column--nine-quarters clearfix">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
@@ -127,7 +127,7 @@
           <a class="btn btn--buy" href="#">Купить</a>
         </article>
 
-        <article class="item">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
@@ -143,7 +143,7 @@
           <a class="btn btn--buy" href="#">Купить</a>
         </article>
 
-        <article class="item">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
@@ -159,7 +159,7 @@
           <a class="btn btn--buy" href="#">Купить</a>
         </article>
 
-        <article class="item">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
@@ -175,7 +175,7 @@
           <a class="btn btn--buy" href="#">Купить</a>
         </article>
 
-        <article class="item">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
@@ -191,7 +191,7 @@
           <a class="btn btn--buy" href="#">Купить</a>
         </article>
 
-        <article class="item">
+        <article class="product">
           <div class="item__image">
             <a class="item__link" href="item.html">
               <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
@@ -228,7 +228,7 @@
 
     <footer class="site-footer">
       <div class="container clearfix">
-        <section class="contacts column column--x5">
+        <section class="contacts column column--five-quarters">
           <p class="contacts__title">Барбершоп «Бородинский»</p>
           <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
           <p class="contacts__link">
@@ -237,14 +237,14 @@
           <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
         </section>
 
-        <section class="social column column--x2 clearfix">
+        <section class="social column column--two-quarters clearfix">
           <p class="social__text">Давайте дружить!</p>
           <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
           <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
           <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
         </section>
 
-        <section class="copyright column column--x5">
+        <section class="copyright column column--five-quarters">
           <p class="copyright__text">Разработано:</p>
           <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
